Fix spacing and aligment when service label is very long

--- a/src/scss/core/components/_preferences-modal.scss
+++ b/src/scss/core/components/_preferences-modal.scss
@@ -532,6 +532,8 @@ $service-toggle-knob-icon-width: 1.7px;
         display: flex;
         justify-content: space-between;
         transition: background-color .15s ease;
+        gap: 10px;
+        align-items: center;
 
         &:hover{
             background-color: var(--cc-cookie-category-block-hover-bg);
